--- a/kivy/registrasi.kv
+++ b/kivy/registrasi.kv
@@ -136,7 +136,10 @@
                         size: self.size
                         radius: [10, 10, 10, 10]
                 # on_press: app.login(username.text, password.text)
-                # pos_hint: {"center_x": 0.5, "center_y": 0.5}
+        
+        
+        Widget:
+            size_hint_x: 0.02 
 
 
 
