--- a/kivy/usurat.kv
+++ b/kivy/usurat.kv
@@ -133,7 +133,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat Pengantar'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -149,7 +149,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat Keterangan orang tua'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -165,7 +165,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat Keterangan kematian'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -181,7 +181,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat Keteranagn Penguburan'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -197,7 +197,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat Keterangan Usaha'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -213,7 +213,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Pengaduan'
+                            text: 'Surat'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
