--- a/kivy/usurat.kv
+++ b/kivy/usurat.kv
@@ -149,7 +149,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Surat Keterangan orang tua'
+                            text: 'Surat Keterangan Tidak Mampu'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -165,7 +165,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Surat Keterangan kematian'
+                            text: 'Surat Keterangan Kematian'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
@@ -181,7 +181,7 @@
                             size: self.parent.width * 0.3, self.parent.height * 0.8
                             pos: self.parent.x + self.parent.width * 0.05, self.parent.center_y - self.height / 2 
                         Label:
-                            text: 'Surat Keteranagn Penguburan'
+                            text: 'Surat Keterangan Kelahiran'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             size: self.parent.width * 0.3, self.parent.height * 0.8
