--- a/kivy/ustruktur.kv
+++ b/kivy/ustruktur.kv
@@ -121,7 +121,7 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/kades.jpeg' #foto kepala desa
                             size_hint: None, None
                             widht:100
                             height:100
@@ -145,7 +145,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Nama kepala desa'
+                        text: 'Heriadi' #nama kepala desa
                         color: 0, 0, 0, 1
                 BoxLayout:
                     id: '2'
@@ -186,7 +186,7 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/sekdes.jpeg' #foto sekretaris
                             size_hint: None, None
                             widht:100
                             height:100
@@ -210,7 +210,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Nama Sekretaris Desa'
+                        text: 'Tri Winarsih' #nama sekretasris
                         color: 0, 0, 0, 1
                 
                 BoxLayout:
@@ -252,7 +252,7 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/kas pem.jpeg' #foto kasi pem
                             size_hint: None, None
                             widht:100
                             height:100
@@ -276,7 +276,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Nama Kasi Pemerintahan'
+                        text: 'Sutanto tan' #nama kasi pem
                         color: 0, 0, 0, 1
                 
                 BoxLayout:
@@ -318,7 +318,7 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/kas kes.jpeg' #foto kasi kes
                             size_hint: None, None
                             widht:100
                             height:100
@@ -342,7 +342,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Nama Kasi Kesejahteraan'
+                        text: 'Sri Wahyuni' #nama kasi kes
                         color: 0, 0, 0, 1
                 BoxLayout:
                     id: '5'
@@ -383,7 +383,7 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/kas pelayanan.jpg' #foto kasi pel
                             size_hint: None, None
                             widht:100
                             height:100
@@ -407,7 +407,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Nama Kasi Pelayanan'
+                        text: 'Haryanti' #nama kasi pel
                         color: 0, 0, 0, 1
 
                 BoxLayout:
@@ -449,13 +449,13 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/keuangan.jpg'
                             size_hint: None, None
                             widht:100
                             height:100
                             padding: 20
                         Label:
-                            text: 'Kepala Dusun 2'
+                            text: 'Kaur Keuangan'
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             halign: 'center'
@@ -473,7 +473,7 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Kepala Dusun 1'
+                        text: 'Yuyun Prastiwi'
                         color: 0, 0, 0, 1
 
                 BoxLayout:
@@ -515,13 +515,13 @@
                         width: 400  
                         height: 120 
                         Image:
-                            source: 'img/p4.jpg'
+                            source: 'img/kadus 1.jpg'
                             size_hint: None, None
                             widht:100
                             height:100
                             padding: 20
                         Label:
-                            text: 'Kepala Dusun 2'
+                            text: 'Kepala Dusun '
                             color: 0, 0, 0, 1
                             size_hint: None, None
                             halign: 'center'
@@ -539,5 +539,5 @@
                                 points: [self.x, self.center_y, self.right, self.center_y]  
                                 width: 1
                     Label:
-                        text: 'Kepala Dusun 2'
+                        text: 'Rahmat Haryanto'
                         color: 0, 0, 0, 1
