--- a/kivy/upengumuman.kv
+++ b/kivy/upengumuman.kv
@@ -1,5 +1,6 @@
 #:kivy 2.3.0
 <UpengumumanScreen>:
+    container: container
     BoxLayout:
         orientation:'vertical'
         padding: 20
@@ -94,152 +95,82 @@
             do_scroll_x: True
             do_scroll_y: False
             BoxLayout:
-                orientation:'horizontal'
-                size_hint_x: None
-                height: 400  
-                width: self.minimum_width
-                spacing: 20
-                padding: 20
-                BoxLayout:
-                    orientation:'vertical'
-                    size_hint_x: None
-                    width: 450
-                    padding: 10
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x - 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x + 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.23
-                        RoundedRectangle:
-                            pos: (self.x, self.y - 3)
-                            size: (self.width, self.height + 4)
-                            radius: [20]
-                    canvas:
-                        Color:
-                            rgba: 1, 1, 1, 1
-                        RoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                            radius: [20]  
-                    Image:
-                        source: 'img/p1.jpg'
-                        size_hint: 1, 1
-                        pos: self.parent.center_x - self.width / 2, self.parent.center_y - self.height / 2
-                BoxLayout:
-                    orientation:'vertical'
-                    size_hint_x: None
-                    width: 460
-                    padding: 10
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x - 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x + 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.23
-                        RoundedRectangle:
-                            pos: (self.x, self.y - 3)
-                            size: (self.width, self.height + 4)
-                            radius: [20]
-                    canvas:
-                        Color:
-                            rgba: 1, 1, 1, 1
-                        RoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                            radius: [20]  
-                    Image:
-                        source: 'img/p2.jpg'
-                        size_hint: 1, 1
-                        pos: self.parent.center_x - self.width / 2, self.parent.center_y - self.height / 2  
-                BoxLayout:
-                    orientation:'vertical'
-                    size_hint_x: None
-                    width: 460
-                    padding: 10
-                    canvas.before:
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x - 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.19
-                        RoundedRectangle:
-                            pos: (self.x + 2, self.y)
-                            size: self.size
-                            radius: [20]
-                        Color:
-                            rgba: 0, 0, 0, 0.23
-                        RoundedRectangle:
-                            pos: (self.x, self.y - 3)
-                            size: (self.width, self.height + 4)
-                            radius: [20]
-                    canvas:
-                        Color:
-                            rgba: 1, 1, 1, 1
-                        RoundedRectangle:
-                            pos: self.pos
-                            size: self.size
-                            radius: [20]  
-                    Image:
-                        source: 'img/p3.jpg'
-                        size_hint: 1, 1
-                        pos: self.parent.center_x - self.width / 2, self.parent.center_y - self.height / 2 
-        BoxLayout:
-            orientation:
-            size_hint_y: 0.05
-            canvas.before:
-                Color:
-                    rgba: 0, 0, 0, 0.19
-                RoundedRectangle:
-                    pos: (self.x - 2, self.y)
-                    size: self.size
-                    radius: [20]
-                Color:
-                    rgba: 0, 0, 0, 0.19
-                RoundedRectangle:
-                    pos: (self.x + 2, self.y)
-                    size: self.size
-                    radius: [20]
-                Color:
-                    rgba: 0, 0, 0, 0.23
-                RoundedRectangle:
-                    pos: (self.x, self.y - 3)
-                    size: (self.width, self.height + 4)
-                    radius: [20]
-            canvas:
-                Color:
-                    rgba: 167/255, 217/255, 255/255, 1
-                RoundedRectangle:
-                    pos: self.pos
-                    size: self.size
-                    radius: [20] 
-            Label:
-                text: 'Scroll ->'
-                padding: [35, 10, 50, 10]
-                color: 0, 0, 0, 1
-                size_hint: 1, 1 
-                valign: 'middle'
-                halign: 'center'
-                text_size: self.size 
-                font_size: 20
+                id: container
+                orientation: 'horizontal'
+                size_hint_y: None
+                height: self.minimum_height
+                padding: 10
+                spacing: 10
+
+        #         BoxLayout:
+        #             id: container
+        #             orientation: 'vertical'
+        #             size_hint_x: None
+        #             width: 450
+        #             padding: 10
+        #             canvas.before:
+        #                 Color:
+        #                     rgba: 0, 0, 0, 0.19
+        #                 RoundedRectangle:
+        #                     pos: (self.x - 2, self.y)
+        #                     size: self.size
+        #                     radius: [20]
+        #                 Color:
+        #                     rgba: 0, 0, 0, 0.19
+        #                 RoundedRectangle:
+        #                     pos: (self.x + 2, self.y)
+        #                     size: self.size
+        #                     radius: [20]
+        #                 Color:
+        #                     rgba: 0, 0, 0, 0.23
+        #                 RoundedRectangle:
+        #                     pos: (self.x, self.y - 4)
+        #                     size: (self.width, self.height + 5)
+        #                     radius: [20]
+        #             canvas:
+        #                 Color:
+        #                     rgba: 1, 1, 1, 1
+        #                 RoundedRectangle:
+        #                     pos: self.pos
+        #                     size: self.size
+        #                     radius: [20] 
+                
+        # BoxLayout:
+        #     orientation:
+        #     size_hint_y: 0.05
+        #     canvas.before:
+        #         Color:
+        #             rgba: 0, 0, 0, 0.19
+        #         RoundedRectangle:
+        #             pos: (self.x - 2, self.y)
+        #             size: self.size
+        #             radius: [20]
+        #         Color:
+        #             rgba: 0, 0, 0, 0.19
+        #         RoundedRectangle:
+        #             pos: (self.x + 2, self.y)
+        #             size: self.size
+        #             radius: [20]
+        #         Color:
+        #             rgba: 0, 0, 0, 0.23
+        #         RoundedRectangle:
+        #             pos: (self.x, self.y - 3)
+        #             size: (self.width, self.height + 4)
+        #             radius: [20]
+        #     canvas:
+        #         Color:
+        #             rgba: 167/255, 217/255, 255/255, 1
+        #         RoundedRectangle:
+        #             pos: self.pos
+        #             size: self.size
+        #             radius: [20] 
+        #     Label:
+        #         text: 'Scroll ->'
+        #         padding: [35, 10, 50, 10]
+        #         color: 0, 0, 0, 1
+        #         size_hint: 1, 1 
+        #         valign: 'middle'
+        #         halign: 'center'
+        #         text_size: self.size 
+        #         font_size: 20
+
